--- a/vignettes/methods.Rmd
+++ b/vignettes/methods.Rmd
@@ -1,3 +1,49 @@
 # Methods
 
-Lorem...
+## Installation
+
+```{r installation}
+library(acsprojectns)
+# library(icdb)
+library(kableExtra)
+```
+
+## Cohort definitions
+
+All patients in the BNSSG area with a hospital admission for an acute coronary syndrome event, between July 2018 and December 2021, were included in the main cohort. This date window was chosen as prescription data in the SWD only exists from July 2018 onward. GP attribute data only exists from October 2019 onward.
+
+### Date window
+
+```{r acs_date_window_definition}
+acs_date_min <- as.POSIXct("2018-07-01", tz="GMT")
+acs_date_max <- as.POSIXct("2021-12-31", tz="GMT")
+kbl(data.frame("Variable"=c("Start date", "End date"), "Value"=c(acs_date_min, acs_date_max)), longtable=T, booktabs=T, caption="Date window")
+```
+
+### CCG provider codes
+
+BNSSG patients were identified by filtering on the appropriate CCG provider codes.
+
+```{r ccg_provider_codes_definition}
+bnssg_ccg_codes <- acsprojectns::get_codes(file_path=system.file("ccg_provider_codes", "bnssg_ccg_provider_codes.csv", package="acsprojectns"))
+kbl(bnssg_ccg_codes, longtable=T, booktabs=T, caption="CCG provider codes")
+```
+
+### Hospital admission method
+
+Acute admissions were identified by filtering on the appropriate admission method codes. Here we accept admission methods that contain the word "emergency".
+
+```{r admission_method_definition}
+adm_method <- acsprojectns::get_codes(file_path = system.file("admission_method_codes", "admission_method_codes.csv", package = "acsprojectns")) |>
+  dplyr::filter(grepl("emergency", .data$admission_method_description))
+kbl(adm_method, longtable = T, booktabs = T, caption = "Admission methods")
+```
+
+### Acute coronary syndrome
+
+Acute coronary syndrome codes were defined as the following. We append a "-" to the end of each ICD-10 code simply because the SQL database contains a few codes such as "I200-". The "-" is removed in the table below.
+
+```{r acs_code_definition}
+acs_icd_codes <- acsprojectns::get_codes(file_path=system.file("icd10_codes", "acs_codes.csv", package="acsprojectns"), append_character="-")
+kbl(acs_icd_codes |> dplyr::filter(!grepl("-", acs_icd_codes$icd_codes)), longtable=T, booktabs=T, caption="Acute coronary syndrome ICD-10 codes") |> kable_styling(full_width=F) |> column_spec(2, width = "10em")
+```
