--- a/vignettes/demographics.Rmd
+++ b/vignettes/demographics.Rmd
@@ -8,24 +8,108 @@ load_all()
 library(icdb)
 library(kableExtra)
 ```
+## Static patient factors
+Analyse the non-time varying patient factors.
+```{r demographics_ethnicity}
+# extract the SUS ACP Spell data for the index event
+dat_ethnicity <- msrv$sus$apc_spells |>
+  # Just ethnicity
+  dplyr::select(nhs_number, ethnic_category, ethnic_category2021) |>
+  # just the cohort IDs
+  dplyr::filter(nhs_number %in% cohort_ids) |>
+  # Add SWD attribute data
+  dplyr::left_join(msrv$swd$swd_attribute |> dplyr::select(nhs_number, ethnicity), by="nhs_number") |>
+  # collect to local
+  icdb::run() |>
+  # combine static variables
+  dplyr::group_by(nhs_number) |>
+  # number of different codings
+  dplyr::mutate(num_codes = n_distinct(ethnic_category, ethnic_category2021, ethnicity, na.rm=T)) |>
+  # arrange and review 
+  dplyr::ungroup() |>
+  dplyr::arrange(dplyr::desc(num_codes))
 
-## Connect to the server
-If working outside of the ICB we need to use the synthetic testing data, to create run the script located in scripts/create_dummy_database_scripts/write_testing_sqlite_database.R
-```{r connection}
-flag <- "home" #work
-if(flag == "home"){
-  config <- system.file("database_connections", flag, "mysql.yaml", package="acsprojectns")
-}else{
-  config <- system.file("database_connections", flag, "....fix...", package="acsprojectns")
-}
-srv <- server(config=config)
-kbl(srv$ABI$vw_APC_SEM_001 |> run() |> head(5) |> dplyr::select(1:5), longtable=T, booktabs=T, caption="Example data")
+# View 
+dplyr::slice(dat_ethnicity, n=10)
 ```
 
-## Extract the cohort
-We first define the cohort in terms of the ICD-10 codes we are interested in and the time-window in which to look.
-```{r extract_cohort_from_sem}
-#
+```{r demographics_sex}
+# extract the SUS ACP Spell data for the index event
+# dat_ethnicity <- msrv$sus$apc_spells |>
+#   # Cohort IDs
+#   dplyr::filter(nhs_number %in% cohort_ids) |>
+#   # Add SWD attribute data
+#   dplyr::left_join(msrv$swd$swd_attribute |> dplyr::select(nhs_number, ethnicity), by="nhs_number") |>
+#   # collect to local
+#   icdb::run() |>
+#   # combine static variables
+#   dplyr::group_by(nhs_number) |>
+#   # 
+#   dplyr::mutate(ethnicity = )
+#   
+#   # Time window
+#   dplyr::filter(spell_start > acs_date_min & spell_end < acs_date_max) |>
+#   # Emergency admission
+#   dplyr::filter(as.character(method_of_admission_hospital_provider_spell) %in% !!adm_method$admission_method_code) |>
+#   # Acute coronary syndrome primary diagnosis
+#   icdb::codes_from(system.file("icd10_codes", "acs.yaml", package="acsprojectns"), primary_diagnosis_icd) |>
+# 
+#   # remove duplicates
+#   dplyr::distinct(nhs_number) |> 
+#   dplyr::pull()
+```
+
+### Extract the data
+```{r extract_cohort_data}
+# SUS APC Spells data
+# data_index_acs <- msrv$sus$apc_spells |>
+#   # only the cohort ids
+#   dplyr::filter(nhs_number %in% !!cohort_ids)
+# 
+# 
+# # Attributes data
+# 
+# 
+#   
+#   
+#   
+#   
+#   dplyr::mutate(idx_acs_diagnosis = icdb::drop_detail(primary_diagnosis_icd, level=2), 
+#                 method_of_admission_hospital_provider_spell = as.character(method_of_admission_hospital_provider_spell)) |>
+#   dplyr::left_join(data.frame(adm_method), by=c("method_of_admission_hospital_provider_spell"="admission_method_code")) |>
+#   dplyr::select(nhs_number, 
+#                 spell_start, 
+#                 spell_end, 
+#                 "admission_method" = admission_method_description, 
+#                 idx_acs_diagnosis)
+# 
+# # define the NHS numbers for the cohort
+# cohort_ids <- unique(cohort$nhs_number)
+# 
+# # View 
+# kbl(cohort |> dplyr::slice_head(n=10), longtable = T, booktabs = T, caption = "Initial cohort")
+# 
+# 
+# 
+# 
+# 
+# sus_apc <- msrv$sus$apc_spells |>
+#   # in our cohort
+#   dplyr::filter(nhs_number %in% !!cohort_ids) |>
+#   # specifics to select
+#   dplyr:
+# 
+# index_cohort <- cohort |>
+#   dplyr::group_by(nhs_number) |>
+#   dplyr::slice_min(spell_start)
+# 
+# # Check that there are no duplicate spells for patients
+# stopifnot(dplyr::n_distinct(index_cohort$nhs_number) == nrow(index_cohort))
+# 
+# 
+# # age, sex, ethnicity , acs type
+# 
+# static_factors <- 
 ```
 
 
